src/styles.scss
/* ... */
@keyframes appearForm {
  0% {
    // transform-origin: top;
    transform: scale(0.95);
    opacity: 0;
  }
  100% {
    transform: scale(1);
    opacity: 1;
  }
}
@keyframes textclip {
  100% {
    background-position: left;
  }
}

.side-menu {
  display: none;
}
@media screen and (max-width: 480px) {
  .side-menu {
    display: flex;
    justify-content: flex-end;
    position: relative;
    width: 80px;
    height: 45px;
    cursor: pointer;
    .menu-icon {
      width: 40px;
      height: 45px;
      position: relative;
      cursor: pointer;
      z-index: 2;
      -webkit-touch-callout: none;
      position: absolute;
      opacity: 0;
    }
    .menu-grp {
      margin: auto;
      position: absolute;
      top: 0;
      right: 0;
      left: 0;
      bottom: 0;
      width: 25px;
      height: 13px;

      .menu-line {
        position: absolute;
        display: block;
        width: 25px;
        height: 3px;
        background: $component;
        background-color: $primary;
        border-radius: 1px;
        transition: all 0.2s cubic-bezier(0.1, 0.82, 0.76, 0.965);

        &:first-of-type {
          top: 0;
        }
        &:last-of-type {
          bottom: 0;
        }
      }
    }

    &.active,
    .menu-icon:checked + div {
      .menu-line {
        &:first-of-type {
          transform: rotate(45deg);
          top: 5px;
        }
        &:last-of-type {
          transform: rotate(-45deg);
          bottom: 5px;
        }
      }
    }

    // &.active:hover .menu-line:first-of-type,
    // &.active:hover .menu-line:last-of-type,
    // &:hover .menu-icon:checked + div.menu-grp .menu-line:first-of-type,
    // &:hover .menu-icon:checked + div.menu-grp .menu-line:last-of-type {
    //   width: 25px;
    // }
  }
  header {
    height: 110px;
  }
  select {
    font-size: 11px;
  }
  input[type='date'] {
    font-size: 11px;
  }
  .cards .content .f-wrapper .task-form #task,
  select#projects,
  input[type='date'] {
    height: 32px;
    font-size: 12px;
  }
  .section-header {
    font-size: 18px;
  }
  .form-header,
  .form-title-header {
    font-size: 16px;
  }

  .cards {
    .content {
      .f-wrapper {
        .task-form {
          .form-header {
            margin-top: 14px;
            margin-bottom: 10px;
          }
          .fa-star {
            margin-top: 50px;
          }
          #note {
            height: 20vh;
            font-size: 12px;
          }
          .extras-wrapper {
            margin-bottom: 20px;
          }
          .fa-regular {
            font-size: 24px;
          }
        }
        .expand-view {
          .expand-header {
            margin-bottom: 8px;
            .project-grp p {
              font-size: 14px;
              margin-top: 1px;
            }
            .project-grp i {
              font-size: 18px;
            }
          }
        }
      }
      .t-wrapper {
        .task p {
          font-size: 12px;
        }
        .no-tasks {
          font-size: 16px;
        }
      }
      .o-wrapper {
        .expand-view {
          #open-title {
            width: 215px;
            font-size: 16px;
            margin-top: 4px;
          }
          #open-note {
            font-size: 14px;
            height: 40vh;
          }
        }
      }
    }
  }

  .header {
    opacity: 0;
    height: 0;
  }
  .cards {
    .sidebar,
    .content {
      transition: 0s;
      height: 70vh;
    }
    .sidebar {
      .projects-header {
        overflow-x: hidden;
      }
    }
    .mobile-stretch {
      transition: 0s;
      margin-top: 5vh;
      height: 90vh;
    }
    .sidebar {
      display: none;
    }
  }
}

